--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo": "~52.0.8",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.7",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -37,6 +37,7 @@
     "@types/react": "~18.3.12",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "metro": "^0.81.0",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
   },
