--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-date-picker": "^5.0.7",
+    "react-native-image-picker": "^7.1.3",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
